--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="carrossel.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="hero.css">
+    <link rel="stylesheet" href="info.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </head>
 
@@ -16,6 +17,20 @@
     <div class="header">
         <div class="ajusteheader">
             <img class="logo" src="./src/img/logo-bd.png" alt="Big Dreams">
+            <ul class="nav">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Sobre</a>
+                </li>
+                <li>
+                    <a href="#">Serviços</a>
+                </li>
+                <li>
+                    <a href="#">Contatos</a>
+                </li>
+            </ul>
             <button class="btnlog" type="button">Logar</button>
         </div>
     </div>
@@ -50,6 +65,20 @@
                 <h1 class="titulo"></h1>
                 <h3 class="conteudo"></h3>
             </div>
+        </div>
+    </div>
+    <div class="info">
+        <div class="tituloInfo">
+            <h2>Por que escolher</h2>
+            <h2>Nossa empresa</h2>
+        </div>
+        <div class="cards">
+            <div class="card tras">
+                <img class="imgLampada" src="./src/img/luz.svg" alt="Criatividade">
+                <p class="pcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, id magnam. Soluta, officiis. Quidem neque consectetur nesciunt.</p>
+            </div>
+            <div class="card">2</div>
+            <div class="card tras">3</div>
         </div>
     </div>
     <script src="carrossel.js"></script>
