--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="hero">
-        <img class="logoHero" src="./src/img/logo-bd.png" alt="Big Dreams">
+        <img class="logoHero" src="./src/img/logo.svg" alt="Big Dreams">
     </div>
     <div class="container">
         <div class="ajustecentro">
@@ -75,10 +75,22 @@
         <div class="cards">
             <div class="card tras">
                 <img class="imgLampada" src="./src/img/luz.svg" alt="Criatividade">
-                <p class="pcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, id magnam. Soluta, officiis. Quidem neque consectetur nesciunt.</p>
+                <p class="pcard">Criativos flexíveis e coerentes com sua Identidade Visual</p>
             </div>
-            <div class="card">2</div>
-            <div class="card tras">3</div>
+            <div class="card">
+                <img class="imgLampada" src="./src/img/brain.svg" alt="Criatividade">
+                <p class="pcard2">Soluções criativas
+                    e implementadas
+                    de acordo com suas
+                    necessidades</p>
+            </div>
+            <div class="card tras">
+                <img class="imgLampada" src="./src/img/code.svg" alt="Criatividade">
+                <p class="pcard3">
+                    Criação de
+                    funcionalidades
+                    personalizadas</p>
+            </div>
         </div>
     </div>
     <script src="carrossel.js"></script>
