neve com movimento no home

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,21 @@
 </head>
 
 <body>
+
+    <div class="snow">
+    <!-- Exemplo: 10 flocos manuais, pode replicar ou gerar via JS -->
+    <span style="left:10%; width:4px; height:4px; animation-duration: 10s; opacity:0.5; filter:blur(2px);"></span>
+    <span style="left:20%; width:6px; height:6px; animation-duration: 15s;"></span>
+    <span style="left:30%; width:3px; height:3px; animation-duration: 12s; opacity:0.3; filter:blur(3px);"></span>
+    <span style="left:40%; width:8px; height:8px; animation-duration: 20s; opacity:0.7;"></span>
+    <span style="left:50%; width:5px; height:5px; animation-duration: 9s; opacity:0.6;"></span>
+    <span style="left:60%; width:7px; height:7px; animation-duration: 18s; opacity:0.4; filter:blur(1px);"></span>
+    <span style="left:70%; width:10px; height:10px; animation-duration: 22s; opacity:0.9;"></span>
+    <span style="left:80%; width:5px; height:5px; animation-duration: 14s; opacity:0.5;"></span>
+    <span style="left:90%; width:6px; height:6px; animation-duration: 16s;"></span>
+    <span style="left:95%; width:4px; height:4px; animation-duration: 11s; opacity:0.3; filter:blur(2px);"></span>
+  </div>
+
     <div class="header">
         <div class="ajusteheader">
             <img class="logo" src="./src/img/logo-bd.png" alt="Big Dreams">
@@ -40,9 +55,9 @@
     <div class="container">
         <div class="ajustecentro">
             <div class="imagens">
-                <div class="radial-bg"></div> <button class="seta seta-esquerda" title="Previous"> <i
-                        class="bi bi-chevron-left"></i> </button> <button class="seta seta-direita" title="Next"> <i
-                        class="bi bi-chevron-right"></i> </button>
+                <div class="radial-bg"></div>
+                <button class="seta seta-esquerda" title="Previous"> <i class="bi bi-chevron-left"></i> </button>
+                <button class="seta seta-direita" title="Next"> <i class="bi bi-chevron-right"></i> </button>
                 <div class="n1">
                     <div class="n1um"></div>
                     <div class="circulo"></div>
