--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,16 +34,16 @@
             <img class="logo" src="./src/img/logo-bd.png" alt="Big Dreams">
             <ul class="nav">
                 <li>
-                    <a href="#">Home</a>
+                    <a class="btnheader" href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Sobre</a>
+                    <a class="btnheader" href="#">Sobre</a>
                 </li>
                 <li>
-                    <a href="#">Serviços</a>
+                    <a class="btnheader" href="./index2.html">Serviços</a>
                 </li>
                 <li>
-                    <a href="#">Contatos</a>
+                    <a class="btnheader" href="#">Contatos</a>
                 </li>
             </ul>
             <button class="btnlog" type="button">Logar</button>
@@ -88,18 +88,18 @@
             <h2>Nossa empresa</h2>
         </div>
         <div class="cards">
-            <div class="card tras">
+            <div class="card tras interacao">
                 <img class="imgLampada" src="./src/img/luz.svg" alt="Criatividade">
                 <p class="pcard">Criativos flexíveis e coerentes com sua Identidade Visual</p>
             </div>
-            <div class="card">
+            <div class="card interacao">
                 <img class="imgLampada" src="./src/img/brain.svg" alt="Criatividade">
                 <p class="pcard2">Soluções criativas
                     e implementadas
                     de acordo com suas
                     necessidades</p>
             </div>
-            <div class="card tras">
+            <div class="card tras interacao">
                 <img class="imgLampada" src="./src/img/code.svg" alt="Criatividade">
                 <p class="pcard3">
                     Criação de
